--- a/dask/templates/dask-jupyter-config.yaml
+++ b/dask/templates/dask-jupyter-config.yaml
@@ -14,7 +14,53 @@ data:
   jupyter_notebook_config.py: |
     c = get_config()
     c.NotebookApp.password = '{{ .Values.jupyter.password }}'
+    c.ContentsManager.allow_hidden = True
 
     {{ .Values.jupyter.extraConfig | nindent 4 }}
+
+---
+apiVersion: v1
+kind: ConfigMap
+metadata:
+  name: {{ template "dask.fullname" . }}-dask-labextension-config
+  labels:
+    app: {{ template "dask.name" . }}
+    heritage: {{ .Release.Service | quote }}
+    release: {{ .Release.Name | quote }}
+    chart: {{ template "dask.chart" . }}
+    component: jupyter
+data:
+  labextension.yaml: |
+    labextension:
+      factory:
+        module: dask_kubernetes
+        class: KubeCluster
+        args: []
+        kwargs: {}
+
+    kubernetes:
+      metadata:
+      worker-template:
+        spec:
+          restartPolicy: Never
+          containers:
+            - name: dask-kube
+              image: daskdev/dask:latest
+              args:
+                - dask-worker
+                - --nthreads
+                - '2'
+                - --no-dashboard
+                - --memory-limit
+                - 2GB
+                - --death-timeout
+                - '60'
+              resources:
+                limits:
+                  cpu: "1"
+                  memory: 2G
+                requests:
+                  cpu: "1"
+                  memory: 2G
 
 {{ end }}
